package fr.univnantes.alma.server.commandsimpl;

import fr.univnantes.alma.core.commands.Command;
import fr.univnantes.alma.core.commands.Serializer;

public class SerializerImpl implements Serializer {
    @Override
    public String serialize(Command command) {
        //TODO: implement method
        return null;
    }

    @Override
    public Command deSerializer(String commandAsString) {
        //TODO: implement method
        return null;
    }
}
